# ai-excel-assistant

./: .gitignore  DECISIONS.md  README.md  agent.py  app.py  main.py  pyproject.toml  tools.py
docs/: DECISIONS.md  FLOW.md
prompts/: system_prompt.md
schemas/: tools_schema.json
tests/: README.md  test_tools.py
tests/evaluation/: dataset.json  evaluator.py
tests/unit_tests/: test_agent.py
