[project]
name = "ai-excel-assistant"
version = "0.1.0"
description = "Natural language AI assistant for Excel data — no agent frameworks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=1.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
